--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,14 @@
 <head>
   <title>Salad Bowl</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@600&display=swap" rel="stylesheet">
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
 <body class="app">
 
   <nav class="top-bar">
-    <h1><a href="/">Salad Bowl</a></h1>
+    <h1><a class="header-text" href="/">Salad Bowl</a></h1>
   </nav>
 
   <%- flash.each do |key, value| -%>
