--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,14 @@
+@font-face {
+	font-family: 'apercu-bold';
+	src: url('../images/apercu-bold.otf');
+}
+
+@font-face {
+	font-family: 'apercu-bold-bold';
+	src: url('../images/apercu-bold-bold.otf');
+  font-weight: bold;
+}
+
 .app {
   // background-color: #FCF2E6;
   background-image: url('https://salad-bowl.s3.us-east-1.amazonaws.com/salad-bowl.jpg');
@@ -9,9 +20,11 @@
 
 .top-bar {
   background-color: transparent;
+  padding-bottom: 0;
+  height: 65px;
 
   .header-text {
-    font-family: 'Baloo Tamma 2', cursive;
+    font-family: 'apercu-bold', sans-serif;
     color: black;
   }
 }
@@ -73,7 +86,7 @@ table {
 
 .reset-button {
   text-align: right;
-  margin: 5px 15px 0 0;
+  margin: 0 15px 0 0;
 }
 
 .entry-form {
@@ -83,7 +96,7 @@ table {
 
 .start-button-container {
   text-align: center;
-  font-family: 'Baloo Tamma 2', cursive;
+  font-family: 'apercu-bold', sans-serif;
   font-size: 3em;
   margin-top: 7%;
 }
@@ -95,36 +108,66 @@ table {
 .countdown-timer {
   text-align: center;
   border-radius: 25px;
-  font-family: 'Baloo Tamma 2';
+  font-family: 'apercu-bold', sans-serif;
   font-weight: lighter;
   font-size: 3em;
 }
 
-.my-turn-container {
-  text-align: center;
-  // background-image: url("circleshadow.jpg");
-  // background-repeat: no-repeat;
-  // background-size: cover;
-}
-
-.entry-name {
-  font-family: 'Baloo Tamma 2', cursive;
+.outer-div {
+  font-family: 'apercu-bold', sans-serif;
   font-weight: lighter;
-  font-size: 2.5em;
-  border: solid 1px black;
-  box-shadow: 10px 10px  rgba(0,0,0,0.6);
-  -moz-box-shadow: 10px 10px  rgba(0,0,0,0.6);
-  -webkit-box-shadow: 10px 10px  rgba(0,0,0,0.6);
-  -o-box-shadow: 10px 10px  rgba(0,0,0,0.6);
-  margin: 0 auto;
-  border-radius: 1000px;
-  padding: 5%;
-  height: 450px;
-  width: 450px;
-}
 
-.entry-inner-div {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  .entry-name {
+    text-align: center;
+    border: solid 1px black;
+    box-shadow: 30px 20px  rgba(0,0,0,0.2);
+    -moz-box-shadow: 30px 20px  rgba(0,0,0,0.2);
+    -webkit-box-shadow: 30px 20px  rgba(0,0,0,0.2);
+    -o-box-shadow: 30px 20px  rgba(0,0,0,0.2);
+    margin: 0 auto;
+    border-radius: 1000px;
+    padding: 5%;
+    height: 450px;
+    width: 450px;
+  }
+
+  .entry-inner-div {
+    font-size: 2em;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .turn-buttons {
+    position: relative;
+    top: 55%;
+    transform: translateY(-45%);
+
+    button {
+      padding: 12px 40px 8px 40px;
+      margin: 0 15px 0 15px;
+      cursor: pointer;
+    }
+
+    button:focus {
+      outline: none;
+    }
+
+    .correct-button {
+      background-color: #608EC8;
+      color: white;
+      border-radius: 25px;
+    }
+  }
+
+  .details {
+    text-align: center;
+    transform: translateY(50%);
+    margin-bottom: 35px;
+  }
+
+  .details-number {
+    font-size: 2.5em;
+    margin: -15px;
+  }
 }
