quick style fix

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -178,12 +178,14 @@
   text-align: center;
   background-color: #F56A7D90;
   opacity: .8;
+	min-height: 100vh;
 }
 
 .scoreboard-Blue {
   padding-top: 50px;
   text-align: center;
   background-color: #6A99F590;
+	min-height: 100vh;
 }
 
 .player-table {
