--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -16,9 +16,16 @@
   background-blend-mode: lighten;
   // overflow: hidden;
   position: relative;
-  font-family: 'apercu', sans-serif;
+  // font-family: 'apercu', sans-serif;
+	// font-family: 'apercu-bold', sans-serif;
+	font-family: 'Baloo Tamma 2', cursive;
   color: #292412;
   -webkit-font-smoothing: antialiased;
+}
+
+footer {
+	text-align: right;
+	bottom: 0;
 }
 
 .submit-button {
@@ -37,11 +44,14 @@
 
 .reset-button-container {
 	text-align: right;
-  margin: 0 15px 0 0;
 }
 
 .reset-button {
-	font-size: .8em;
+	font-size: .9em;
+	margin: 15px 15px 0 0;
+	background: transparent;
+	border: transparent;
+	cursor: pointer;
 }
 
 .refresh-button {
@@ -173,19 +183,59 @@
   top: 160px;
 }
 
-.scoreboard-Red {
+.scoreboard {
   padding-top: 50px;
   text-align: center;
-  background-color: #F56A7D90;
-  opacity: .8;
 	min-height: 100vh;
 }
 
-.scoreboard-Blue {
-  padding-top: 50px;
+.score-table {
   text-align: center;
-  background-color: #6A99F590;
-	min-height: 100vh;
+  border-color: black;
+  margin: 0 30% 0 30%;
+  width: 40%;
+	font-size: 1.6em;
+
+	.small-text {
+		font-size: .5em;
+	}
+
+	thead {
+		background: #F1F1F1;
+		border: #292412;
+	}
+
+	th, td {
+		text-align: center;
+		background: #F1F1F1;
+		border: 4px solid #faf6ee;
+		border-radius: 10px;
+	}
+
+	.R1 {
+		background-color: #F25162;
+		color: #faf6ee;
+	}
+	.R2 {
+		background-color: #F25162;
+		color: #faf6ee;
+	}
+	.R3 {
+		background-color: #F25162;
+		color: #faf6ee;
+	}
+	.B1 {
+		background-color: #515BF2;
+		color: #faf6ee;
+	}
+	.B2 {
+		background-color: #515BF2;
+		color: #faf6ee;
+	}
+	.B3 {
+		background-color: #515BF2;
+		color: #faf6ee;
+	}
 }
 
 .player-table {
@@ -194,11 +244,11 @@
   }
 
 	.th-red {
-		color: red;
+		color: #F25162;
 	}
 
 	.th-blue {
-		color: blue;
+		color: #515BF2;
 	}
 
 	thead {
@@ -215,17 +265,6 @@
   margin: 0 35% 0 35%;
   width: 30%;
 	margin-bottom: 15px;
-}
-
-.score-table {
-  th {
-    text-align: center;
-  }
-
-  text-align: center;
-  border-color: black;
-  margin: 0 30% 0 30%;
-  width: 40%;
 }
 
 .entry-form {
@@ -332,4 +371,8 @@
       font-size: 1.8em;
     }
   }
+}
+
+.privacy-policy {
+	text-align: center;
 }
