--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -298,6 +298,10 @@ footer {
   font-size: 3em;
 }
 
+.countdown-timer-red {
+	color: #F25162;
+}
+
 .outer-div {
   font-family: 'apercu-bold', sans-serif;
   font-weight: lighter;
